# file_fiter_by_hash

./: .gitignore  CLAUDE.md  README.md  calculate_folder_hash.py  example.db  logger.db  logger_db.db  main.py  multi_proceing.py  pgsql_example.py  pyproject.toml  schmeas.py  test_db.db
.claude/: settings.local.json
Recycle/: schmeas.py
Recycle/logger/: __init__.py  logger.py
Recycle/logger/sqlite_db/: __init__.py
Recycle/mysql_db_new/: init_db.py  query_item.py
Recycle/postgresql_db/: __init__.py  save_result.py
Recycle/sqlite_db/: init_db.py
database/: init_db.py  models.py  query_item.py  save_result.py
mysql_db/: init_db.py  models.py  query_item.py  save_result.py
src/file_fiter_by_hash/: logger_backup.py  main.py  multi_proceing.py
src/file_fiter_by_hash/calculate_hash/: __init__.py  calculate_folder_hash.py  calculate_hash.py
src/file_fiter_by_hash/config/: __init__.py  classify_config.py  file_config.py  logger_config.py  salt.py  service_code.py  zipped_suffix.py
src/file_fiter_by_hash/control/: filter_process.py  process_item.py
src/file_fiter_by_hash/logger/: __init__.py  logger.py
src/file_fiter_by_hash/mysql_db/: __init__.py  init_db.py  models.py  query_item.py  (+1 more)
temp_case/: temp.py  temp_doubao.py  test.py  test2.py  test3.py  test4.py  test_size.py  test_zip.py
test_case/: test_calculate_folder_hash.py  test_classfiy_folder.py  test_database.py  test_file_operation.py  test_item_classfiy.py  test_multi_proceing.py  test_mysqldb.py  test_sqllite_logger.py  test_z_u_c.py  test_zip_item.py
test_case/logger/: test_new_logger.py
(+56 files in other folders)
